--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "crypto-random-string": "^3.0.1",
     "express": "^4.17.1",
     "md5": "^2.2.1",
-    "nodemon": "^2.0.1"
+    "node-fetch": "^2.6.0",
+    "nodemailer": "^6.4.2",
+    "nodemon": "^2.0.1",
+    "web-push": "^3.4.3"
   }
 }
